# darwin-py

./: .cursorules  .editorconfig  .gitignore  .tool-versions  404.html  DEV.md  Dockerfile  Dockerfile.develop  LICENSE  README.md  alternative_approach.py  darwin_demo.py  demo.py  format.yml  import_output_profile_1670599190.out  import_output_stdout_1670599190.out  import_output_time_1670599190.out  index.html  lint.yml  mkdocs.yml  notebook.ipynb  output_profile_1670506413.out  output_profile_1670506692.out  output_profile_1670508746.out  output_profile_1670515893.out  output_profile_1670546538.out  output_profile_1670585289.out  output_profile_1670587304.out  output_profile_1670589261.out  output_profile_1670590270.out  output_profile_1670590367.out  output_profile_1670590486.out  output_profile_1670590526.out  output_profile_1670590615.out  output_stdout_1670506692.out  output_stdout_1670508746.out  output_stdout_1670515893.out  output_stdout_1670546538.out  output_stdout_1670585289.out  output_stdout_1670587304.out  (+29 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  ISSUE_TEMPLATE  MISC_install_deps.yml  dependabot.yml  dependency-review-config.yml  pull_request_template.md
.github/scripts/: notify_backend_of_new_version.sh
.github/workflows/: EVENT_merge_to_master.yml  EVENT_pull_request.yml  EVENT_release.yml  EVENT_scheduled_release.yml  EVENT_tag.yml  EVENT_update-linear-labels.yml  JOB_check-master-can-release.yml  JOB_create_release.yml  JOB_debug_contexts.yml  JOB_e2e.yml  JOB_format.yml  JOB_generate_documentation.yml  JOB_get_changed_files.yml  JOB_lint.yml  JOB_python_checks.yml  JOB_reverse_commit_on_fails.yml  JOB_slack_message.yml  JOB_tests.yml  JOB_typecheck.yml  OLD_document.yml  OLD_tests.yml  code_quality.yml  codeql-analysis.yml  codeql.yml  dependency-review.yml  docs.yaml  document.yml  documentation.yml  e2e.yml  format.yml  lint.yml  notify_backend_of_new_version.yml  pull_request.yml  pythonpublish_sdist.yml  release.yml  scorecards.yml  tests.yml  update-linear-labels.yml  upload.yml  version_bump.yml
.hooks/: typechecking_installer.sh
brent-test-scripts/: gust_train_handle_clone.py  lib_test.py  summer-slam.py
commandline/: index.html
darwin/: __init__.py  backend_v2.py  cli.py  cli_functions.py  client.py  config.py  console_settings.py  dataset.py  datatypes.py  doc_enum.py  exceptions.py  generate_video_artifacts.py  item.py  item_sorter.py  objectstore.py  options.py  path_utils.py  table.py  team.py  types.py  utils.py  validators.py
darwin/dataset/: __init__.py  data.py  download_manager.py  identifier.py  imports.py  local_dataset.py  release.py  release_v2.py  remote_dataset.py  remote_dataset_v1.py  remote_dataset_v2.py  split_manager.py  storage_uploader.py  upload_manager.py  utils.py
darwin/exporter/: __init__.py  exporter.py
darwin/extractor/: __init__.py  video.py
darwin/future/: exceptions.py  pydantic_base.py
darwin/helpers/: __init__.py
darwin/importer/: __init__.py  importer.py  satis.py
darwin/integrations/: README.md  __init__.py  strategy.py  train_handler.py  typing.py  utils.py
darwin/json/: __init__.py  dumps.py  loads.py
darwin/pytorch/: __init__.py  dataset.py  transforms.py  utils.py
darwin/torch/: README.md  __init__.py  dataset.py  transforms.py  utils.py
darwin/utils/: __init__.py  flatten_list.py  get_item_count.py  utils.py
darwin/version/: __init__.py
darwin_py.egg-info/: PKG-INFO
deploy/: _filter_files.py  _move_tickets_to_done.py  build.sh  change_package_name.py  check_poetry.sh  check_python.sh  confirm_main_branch_deployability.py  create_release.sh  deploy.py  docs_dependencies.sh  docs_generate_docs.sh  docs_parse_readme.sh  format.sh  format_lint.sh  increase_version.py  install_deps.sh  lint.sh  nightly_package_setup.py  revert_nightly_setup.py  run_e2e_tests.sh  run_tests.sh
docs/: .buildinfo  DEV.md  README.md  commandline.md  darwin.dataset.html  darwin.exporter.formats.html  darwin.exporter.html  darwin.html  darwin.importer.formats.html  darwin.importer.html  darwin.torch.html  genindex.html  index.html  index.md  library.md  modules.html  objects.inv  py-modindex.html  release_process.md  search.html  searchindex.js  torch.md
docs/.doctrees/: darwin.dataset.doctree  darwin.doctree  darwin.exporter.doctree  darwin.exporter.formats.doctree  darwin.importer.doctree  darwin.importer.formats.doctree  darwin.torch.doctree  environment.pickle  index.doctree  modules.doctree
docs/_modules/: index.html
docs/_static/: documentation_options.js
e2e_tests/: .env.example  .env.sample  __init__.py  conftest.py  e2e_test.md  exceptions.py  helpers.py  logger_config.py  objects.py  pytest.ini  setup.py  setup_tests.py  teardown.py  test_create.py  test_darwin.py  test_example.py  test_setup_helpers.py
e2e_tests/cli/: test_convert.py  test_full_cycle.py  test_import.py  test_pull.py  test_push.py
e2e_tests/data/: base_annotation.json
e2e_tests/fixtures/: class_management.py  dataset_management.py  storage_management.py  team_management.py  user_management.py  workflow_management.py
e2e_tests/sdk/: test_readonly_video.py
search/: search_index.json
semantic_outputs/: class_mapping.csv
source/: conf.py  darwin.dataset.rst  darwin.exporter.formats.rst  darwin.exporter.rst  darwin.importer.formats.rst  darwin.importer.rst  darwin.rst  darwin.torch.rst  index.rst  modules.rst
test/: class_mapping.csv  get_darwin_dataset.py
tests/: fixtures.py  server_example_returns.py  test_check_union_pipe_operator.py  test_client.py  test_setup_helpers.py  test_union_pipe_operator.py  utils.py  version_test.py
tests/darwin/: backend_v2_test.py  cli_functions_test.py  client_test.py  darwin_utils_test.py  datatypes_test.py  item_sorter_test.py  item_test.py  objectstore_test.py  path_utils_test.py  utils_test.py
tests/e2e_test_internals/: test_run_cli_command.py
tests/model_training/: test_classification_model_training.py  test_image_model_training.py  (+3 more)
tools/: _console.py  _helper_functions.py  _regexes.py  validate_version.py
torch/: index.html
(+450 files in other folders)
