[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "darwin-py"
version = "0.8.57"
description = "Library and command line interface for darwin.v7labs.com"
homepage = "https://docs.v7labs.com/reference/getting-started-2"
documentation = "https://darwin-py-sdk.v7labs.com/index.html"
repository = "https://github.com/v7labs/darwin-py"
authors = ["V7 <info@v7labs.com>"]
readme = "README.md"
license = "MIT"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
[[tool.poetry.packages]]
include = "darwin"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_subclassing_any = true
python_version = "3.10"
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = false
warn_unreachable = true
pretty = true
implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
select = ["E", "F", "C"]
ignore = ["E203", "E402", "E501"]
line-length = 88

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503", "E402"]

[tool.black]
line-length = 88

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
argcomplete = "^2.0.0"
humanize = "^4.4.0"
pillow = "^10.1.0"
requests = "^2.28.1"
rich = "^13.0.1"
upolygon = "0.1.10"
jsonschema = ">=4.0.0"
deprecation = "^2.1.0"
pydantic = "^2.0.0"
orjson = "^3.8.5"
numpy = "*"
toml = "^0.10.2"
types-requests = "^2.28.11.8"
tqdm = "^4.64.1"
types-pyyaml = "^6.0.12.9"
pyyaml = "^6.0.1"
json-stream = "^2.3.2"

[tool.poetry.extras]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "debugpy",
    "responses",
    "pytest",
    "flake8-pyproject",
    "pytest-rerunfailures",
    "ruff",
    "validate-pyproject",
]
test = ["responses", "pytest", "flake8-pyproject"]
ml = ["torch", "torchvision", "scikit-learn", "albumentations"]
medical = ["nibabel", "connected-components-3d"]
ocv = ["opencv-python-headless"]

[tool.poetry.scripts]
darwin = "darwin.cli:main"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402", "F403"]

[tool.poetry.dependencies.nibabel]
version = "^5.0.0"
python = ">=3.8.1"
optional = true

[tool.poetry.dependencies.connected-components-3d]
version = "^3.10.3"
optional = true

[tool.poetry.dependencies.scikit-learn]
version = "^1.2.0"
python = ">=3.8.1,<3.12"
optional = true

[tool.poetry.dependencies.albumentations]
version = "^1.3.1"
python = ">=3.8"
optional = true

[tool.poetry.dependencies.torch]
version = "^2.0.0"
optional = true

[tool.poetry.dependencies.torchvision]
version = "^0.15.0"
optional = true

[tool.poetry.dependencies.black]
version = "^22.12.0"
optional = true

[tool.poetry.dependencies.isort]
version = "^5.11.4"
optional = true

[tool.poetry.dependencies.mypy]
version = "^1.5"
optional = true
python = ">=3.8"

[tool.poetry.dependencies.responses]
version = "^0.22.0"
optional = true

[tool.poetry.dependencies.pytest]
version = "^7.2.1"
optional = true

[tool.poetry.dependencies.debugpy]
version = "1.6.7"
optional = true

[tool.poetry.dependencies.mpire]
version = "^2.7.0"

[tool.poetry.dependencies.python-dotenv]
version = "^1.0.0"
python = ">3.8"

[tool.poetry.dependencies.opencv-python-headless]
version = "^4.8.0.76"
optional = true

[tool.poetry.dependencies.pytest-rerunfailures]
version = "^12.0"
optional = true

[tool.poetry.dependencies.ruff]
version = "^0.0.292"
optional = true

[tool.poetry.dependencies.validate-pyproject]
version = "^0.15"
optional = true
